@@ -5303,9 +5303,6 @@ extern tree cxx_omp_clause_dtor			(tree, tree);
 extern void cxx_omp_finish_clause		(tree);
 extern bool cxx_omp_privatize_by_reference	(const_tree);
 
-/* in parser.c */
-extern bool no_linkage_lambda_type_p		(tree);
-
 /* -- end of C++ */
 
 #endif /* ! GCC_CP_TREE_H */
